--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -18,9 +18,6 @@
     </header>
   <body>
     <section id="sobre-mi" class="sobre-mi">
-      <div class="sobre-mi-img">
-        <img src="imagenes/Proyecto.png" alt="" />
-      </div>
       <div class="sobre-mi-texto">
         <h2>Sobre mís proyectos</h2>
         <p>
@@ -34,6 +31,9 @@
           Por eso, si tenés un proyecto en mente, ¡me encantaría ayudarte a
           hacerlo realidad!
         </p>
+      </div>
+      <div class="sobre-mi-img">
+        <img src="/imagenes/Proyecto.png" alt="">
       </div>
     </section>
     <section>
