--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -33,24 +33,24 @@
         </p>
       </div>
       <div class="sobre-mi-img">
-        <img src="/imagenes/Proyecto.png" alt="">
+        <img class="imagen-difuminada" src="/imagenes/Proyecto.png" alt="">
       </div>
     </section>
-    <section>
-      <h1>Contenido</h1>
+    <section class="conteiner-contenido">
+      <h1 class="contenido-titulo">Contenido</h1>
       <img src="" alt="contenido-caminito " />
     </section>
     <section>
       <h1>Branding e identidad visual</h1>
-      <div class="educacion-img">
-        <div class="educacion-img-contenedor">
-          <img src="imagenes/Educacion/alberdi.png" alt="" />
+      <div class="">
+        <div class="">
+          <img src="" alt="" />
         </div>
-        <div class="educacion-img-contenedor">
-          <img src="imagenes/Educacion/ISEC.jpg" alt="" />
+        <div class="">
+          <img src="" alt="" />
         </div>
-        <div class="educacion-img-contenedor">
-          <img src="imagenes/Educacion/password.jpg" alt="" />
+        <div class="">
+          <img src="" alt="" />
         </div>
       </div>
     </section>
