--- a/proyectos-style.css
+++ b/proyectos-style.css
@@ -59,13 +59,12 @@ body{
 /*sobre mi*/
 #sobre-mi{
     display: flex;
-    margin-top: 2rem;
-    /*align-items: center;*/
+    align-items: center;
     justify-content: center;
 }
 
 #sobre-mi div{
-    margin: 3rem;
+    margin: 1rem 3rem 0 3rem;
 }
   
 
@@ -82,7 +81,7 @@ body{
 }
 
 .sobre-mi-texto h2{
-    margin: 0;
+    margin: 0 1rem 0 0;
     padding: 0 1rem 0 1rem;
     background-color: var(--blanco);
     margin-top: -4rem;
@@ -92,6 +91,7 @@ body{
     font-weight: var(--bold);
     font-size: 3rem;
     position: absolute;
+    right: 0%;
 }
 .sobre-mi-texto p{
     margin: 0;
@@ -103,9 +103,21 @@ body{
 }
 .sobre-mi-img{
     border-radius: 20%;
+    margin: 0;
 }
   
-.sobre-mi-img img{
+.imagen-difuminada{
     width:25rem;
     transform: scaleX(-1);
+    mask-image: linear-gradient(black 20rem, transparent 100%);
 }
+
+/*contenido*/
+.contenido-titulo{
+    background-color: var(--blanco);
+    font-family: var(--tipografía);
+    font-weight: var(--bold);
+    font-size: 5rem;
+    margin: 0 3rem 4rem;
+}
+/*brading e identidad visua*/
