--- a/proyectos-style.css
+++ b/proyectos-style.css
@@ -73,6 +73,7 @@ body{
     padding: 1rem;
     height: auto;
     position: relative;
+    
 }
 @media (min-width: 1660px) {
     .sobre-mi-texto{
@@ -100,6 +101,7 @@ body{
     font-family: var(--tipografía);
     font-weight: var(--regular);
     font-size: 2rem;
+    
 }
 .sobre-mi-img{
     border-radius: 20%;
@@ -107,7 +109,7 @@ body{
 }
   
 .imagen-difuminada{
-    width:25rem;
+    width:30rem;
     transform: scaleX(-1);
     mask-image: linear-gradient(black 20rem, transparent 100%);
 }
@@ -117,7 +119,93 @@ body{
     background-color: var(--blanco);
     font-family: var(--tipografía);
     font-weight: var(--bold);
-    font-size: 5rem;
+    font-size: 6rem;
     margin: 0 3rem 4rem;
 }
+.contenido-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.contenido-img a{
+    position: absolute;
+    text-decoration: none;
+    color: var(--negro);
+    font-family: var(--tipografía);
+    font-size: 3rem;
+    font-weight: var(--bold);
+}
+.a-branding{
+    top: -1rem;
+    left: 37.7rem;
+    margin: 0%;
+    padding: 0 3rem 0 3rem;
+}
+.a-impresos{
+    top: 13.5rem;
+    right: 32.7rem;
+    margin: 0%;
+    padding: 0 3rem 0 3rem;
+}
+.a-ux-ui{
+    top: 28rem;
+    left: 65rem;
+    margin: 0%;
+    padding: 0 3rem 0 3rem;
+}
+.a-rrss{
+    bottom:20.8rem;
+    right: 10.5rem;
+    margin: 0%;
+    padding: 0 3rem 0 3rem;
+}
+.a-audiovisual{
+    bottom:-1rem;
+    right: 64rem;
+    margin: 0%;
+    padding: 0 3rem 0 3rem;
+}
+
 /*brading e identidad visua*/
+.branding-center{
+    display: flex;
+    flex-direction: column;
+    padding: 0 4rem 0 ;
+    justify-content: center;
+    align-items: center;
+}
+#branding h2{
+    background-color: var(--blanco);
+    font-family: var(--tipografía);
+    font-weight: var(--bold);
+    font-size: 6rem;
+    margin: 4rem 3rem;
+}
+
+.branding-img{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10rem;
+  }
+.branding-img-contenedor{
+    padding: 0%;
+    margin: 0;
+    border-radius: 1.6rem;
+    background-color: var(--lila);
+    justify-content: center;
+    align-items: center;
+   }
+   
+.branding-img-contenedor img {
+    height: 30rem;
+    width: auto;
+    padding: 4rem;
+    border-radius: 1.6rem;
+}
+
+@keyframes branding{
+
+}
