--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{
 
 .navegador{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   background-color: var(--lila);
   height: 5rem;
@@ -187,28 +187,29 @@ body{
 .imagen-skills img{
   height: 30rem;
 }
-.software-skills{
+.software-center{
   display: flex;
-  flex-direction: column;
   padding: 0 4rem 0;
   justify-content: center;
   align-items: center;
 }
-
+.software-text{
+  margin: 0 0 0 3rem;
+}
 .software-text h2{
   font-family: var(--tipografía);
   font-weight: var(--bold);
   font-size: 5rem;
-  margin: 2rem 0 0 0;
 }
 .software-imagen{
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  max-width: 120rem;  
+  max-width: 120rem;
+  gap: 7rem;
   margin: 0 auto;    
   align-items: center;
   justify-content: center;
-  padding: 2rem;
+  padding: 1rem;
 }
 .software-imagen img{
   margin-bottom: 3rem;
@@ -240,6 +241,9 @@ body{
   padding: 0%;
   margin: 5rem;
   border-radius: 1.6rem;
+  position: relative;
+  justify-content: center;
+  align-items: center;
  }
  
 .educacion-img-contenedor img {
@@ -251,12 +255,31 @@ body{
   opacity: 0.5;
 }
 
+.overlay-texto {
+  position: absolute;
+  top: 30%;
+  text-align: center;
+  color:var(--blanco);
+  font-family: var(--tipografía);
+  font-size: 1.8rem;
+  font-weight: var(--bold);
+  padding: 1rem;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 0 0 1rem 1rem;
+}
+
+.educacion-img-contenedor:hover .overlay-texto {
+  opacity: 1;
+}
+
+
 /*proyectos */
 #proyectos {
   position: relative;
   height: 80rem;
   overflow: hidden;
-  color: white;
+  color:var(--blanco);
   margin: 10rem 0 2rem 0;
 }
 .content-text{
