--- a/proyectos-style.css
+++ b/proyectos-style.css
@@ -183,37 +183,79 @@ body{
     font-size: 6rem;
     margin: 4rem 3rem;
 }
-
-.branding-img{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 10rem;
-  }
-.branding-img-contenedor{
-    padding: 0%;
-    margin: 0;
-    border-radius: 1.6rem;
-    background-color: var(--lila);
+.container {
+    position: relative;
     justify-content: center;
     align-items: center;
-   }
-   
-.branding-img-contenedor img {
-    height: 30rem;
+    display: flex;
+    gap: 15rem;
+}
+.button-branding {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: auto;
-    padding: 4rem;
-    border-radius: 1.6rem;
+    height: 25rem;
+    padding: 2rem;
+    background-color:var(--lila);
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: transform 0.3s;
 }
-@keyframes branding{
-
+.button-branding img {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+}
+.image {
+    position: relative;
+    display: flex;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 10px;
+}
+.image p{
+    position: absolute;
+    top: 12rem;
+    left: 6rem;
+    font-family: var(--tipografía);
+    font-weight: var(--medium);
+    font-size: 2.7rem;
+    color: var(--negro);
+    text-align: start;
+}
+.back-button{
+    position: absolute;
+    left: 30rem;
+    top: -12rem;
+    width: 25rem;
+    height: auto;
+    background-color:var(--gris);
+    border: none;
+    border-radius: 15px;
+    color: var(--Violetabrillante);
+    font-family: var(--tipografía);
+    font-weight: var(--medium);
+    font-size: 3.2rem;
+    cursor: pointer;
+    transition: transform 0.3s;
 }
 
+.back-button:hover{
+    background-color:var(--Violetabrillante);
+    color: var(--blanco);
+}
+.hidden {
+    display: none;
+}
 /*medios impresos*/
 #impresos {
     position: relative;
     height: 80rem;
-    margin: 1rem 0 2rem 0;
+    overflow: hidden;
+    margin: 2rem 0 2rem 0;
   }
 #impresos h2{
     font-family: var(--tipografía);
@@ -221,38 +263,78 @@ body{
     font-size: 6rem;
     margin: 2rem 3rem;
 }
-
-.medioscarrousel {
-    width: 300vw; 
+.carousel-images {
     display: flex;
-    animation: slide 15s infinite;
-    z-index: 0;
-  }
-  
-.medioscarrousel img {
-    width: 100vw;
-    object-fit: fill;
-    flex-shrink: 0;
-  }
-  
-  /* Carrusel con pausas */
-  @keyframes slide {
-    0%   { transform: translateX(0); }
-    15%  { transform: translateX(0); }
-  
-    20%  { transform: translateX(-100vw); }
-    40%  { transform: translateX(-100vw); }
-  
-    45%  { transform: translateX(-200vw); }
-    50%  { transform: translateX(-200vw); }
-  
-    80%  { transform: translateX(0); } 
-    100% { transform: translateX(0); }
-  }
-  
- /* .overlay-content {
-
-  }*/
+    transition: transform 0.4s ease;
+}
+.carousel-images div {
+    width: 100%;
+}
+.reyparvis{
+    position: relative;
+}
+.reyparvis p{
+    position: absolute;
+    font-family: var(--tipografía);
+    color: var(--negro);
+    font-weight: var(--medium);
+    font-size: 2.2rem;
+    right: 0;
+    top: 8rem;
+    text-align: end;
+    margin: 4rem;
+}
+.expo{
+    position: relative;
+}
+.expo p{
+    position: absolute;
+    font-family: var(--tipografía);
+    color: var(--negro);
+    font-weight: var(--medium);
+    font-size: 2.2rem;
+    right: 0;
+    top: 8rem;
+    text-align: end;
+    margin: 4rem;
+}
+.bateria{
+    position: relative;
+}
+.bateria p{
+    position: absolute;
+    font-family: var(--tipografía);
+    color: var(--negro);
+    font-weight: var(--medium);
+    font-size: 2.2rem;
+    right: 0;
+    top: 8rem;
+    text-align: end;
+    margin: 4rem;
+}
+.medioscarousel button {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    bottom: 0;
+    width: 5rem;
+    height: 5rem;
+    transform: translateY(-50%);
+    background-color:var(--violeta);
+    color: var(--Violetabrillante);
+    border: .4rem solid var(--Violetabrillante);
+    font-size: 2.5rem;
+    cursor: pointer;
+    border-radius: 50%;
+    padding: 0;
+}
+.previmpresos {
+    left: 45%;
+}
+.nextimpresos {
+    right: 45%;
+}
 
 
 /*Diseño Ux/Ui*/
@@ -322,23 +404,78 @@ body{
     margin: 4rem 3rem;
 }
 
+.image-containerf {
+    background-color: #FFD692;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    height: 70rem;
+    width: 100%;
+    cursor: pointer;
+}
+.image-containerp {
+    background-color: #D1C6B7;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    height: 70rem;
+    width: 100%;
+    cursor: pointer;
+}
+.image{
+    height: 65rem;
+}
+.image-button{
+    height: 60rem;
+    width: auto;
+}
+.image-containerp .image-containerf  img {
+    height: 40rem;
+    width: auto;
+    cursor: pointer;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    gap: 15rem;
+}
+button {
+    border: none;
+    background-color: var(--blanco);
+    padding: 10px;
+    cursor: pointer;
+}
+/*audiovisual*/
+#audiovisual{
+    display: flex;
+    flex-direction: column;
+}
 #audiovisual h2{
     font-family: var(--tipografía);
     font-weight: var(--bold);
     font-size: 6rem;
     margin: 4rem 3rem;
 }
-
-
+.video-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 5rem 0;
+}
+video {
+    width: 160rem;
+    height: auto;
+}
 /*footer*/
 .flex-col{
     display: flex;
     flex-direction: column;
-  }
-  .align-justify{
+}
+.align-justify{
     align-items: center;
     justify-content: center;
-  }
+}
 footer{
     background-color: var(--lila);
     justify-content: space-evenly;
