responsive design max-width 768px

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import "style-res.css";/* responsive*/
 /*Variables color*/
 :root{
   --negro:#000000;
@@ -80,6 +80,10 @@ body{
   color: var(--blanco);
 }
 
+
+#nav-button{
+  display: none;
+}
 .navegador{
   display: flex;
   justify-content: space-evenly;
@@ -88,7 +92,7 @@ body{
   height: 5rem;
 }
 
-.navegador a{
+.navegador  a{
   color: var(--blanco);
   text-decoration: none;
   font-family: var(--tipografía);
@@ -162,7 +166,7 @@ body{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 97rem;
+   gap: 9rem;  
 }
 .skills-text{
   margin: 0%;
@@ -455,7 +459,7 @@ footer img{
   margin: 0 0 0 2rem;
   left: 0%;
 }
-
+ 
 @media (max-width: 768px) {
   .skills h2,
   .software-skills h2,
