--- a/proyectos-style.css
+++ b/proyectos-style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import "style-res-proyectos.css";/* responsive*/
+
 /*Variables color*/
 :root{
   --negro:#000000;
@@ -122,10 +122,7 @@ body{
     align-items: center;
     position: relative;
 }
-.contenido-img img {
-    width: 100%;
-    height: auto;
-}
+
 .contenido-img a{
     position: absolute;
     text-decoration: none;
@@ -134,34 +131,33 @@ body{
     font-size: 3rem;
     font-weight: var(--bold);
 }
-
 .a-branding{
-    top: -1%;
-    left: 2%;
+    top: -1rem;
+    left: 37.7rem;
     margin: 0%;
     padding: 0 3rem 0 3rem;
 }
 .a-impresos{
-    top: 20%;
-    right: 25%;
+    top: 13.5rem;
+    right: 32.7rem;
     margin: 0%;
     padding: 0 3rem 0 3rem;
 }
 .a-ux-ui{
-    top: 41%;
-    left: 26%;
+    top: 28rem;
+    left: 65rem;
     margin: 0%;
     padding: 0 3rem 0 3rem;
 }
 .a-rrss{
-    bottom: 30%;
-    right: 2%;
+    bottom:20.8rem;
+    right: 10.5rem;
     margin: 0%;
     padding: 0 3rem 0 3rem;
 }
 .a-audiovisual{
-    bottom: 0%;
-    right: 60%;
+    bottom:-1rem;
+    right: 64rem;
     margin: 0%;
     padding: 0 3rem 0 3rem;
 }
